--- a/style.css
+++ b/style.css
@@ -477,8 +477,9 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 30px;
+  padding-right: 30px;
+  box-sizing: content-box;
 }
 .header__links {
   display: flex;
@@ -513,6 +514,20 @@ img {
   transform: scaleX(1);
 }
 
+@media (max-width: 768px) {
+  .header__logo {
+    max-width: 50px;
+  }
+  .header__link {
+    font-size: 16px;
+  }
+}
+@media (max-width: 480px) {
+  .header__inner {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
 .footer {
   background-color: #112836;
   padding-top: 72px;
@@ -608,10 +623,12 @@ img {
   flex-direction: column;
   align-items: center;
   padding-top: 170px;
-  padding-bottom: 90px;
+  padding-bottom: 0;
 }
 .hero__inner {
   max-width: 1200px;
+  padding-left: 30px;
+  padding-right: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -665,9 +682,78 @@ img {
 }
 .hero__map {
   max-width: 960px;
+  width: 100%;
   border-radius: 16px;
 }
 
+@media (max-width: 1200px) {
+  .hero__h1 {
+    font-size: 96px;
+    margin-bottom: 21px;
+  }
+  .hero__h2 {
+    font-size: 32px;
+  }
+  .hero__p {
+    font-size: 21px;
+  }
+  .hero__caption {
+    max-width: 80%;
+    font-size: 28px;
+  }
+}
+@media (max-width: 990px) {
+  .hero__h1 {
+    font-size: 68px;
+  }
+  .hero__h2 {
+    font-size: 24px;
+    letter-spacing: unset;
+  }
+  .hero__p {
+    font-size: 18px;
+  }
+  .hero__caption {
+    font-size: 26px;
+    margin-top: 32px;
+  }
+}
+@media (max-width: 768px) {
+  .hero__h1 {
+    font-size: 54px;
+    margin-bottom: 12px;
+  }
+  .hero__h2 {
+    font-size: 16px;
+    line-height: 1.35;
+    max-width: 400px;
+    margin-bottom: 18px;
+  }
+  .hero__p {
+    font-size: 14px;
+    max-width: 400px;
+  }
+  .hero__caption {
+    font-size: 21px;
+    margin-top: 24px;
+  }
+  .hero__map {
+    border-radius: 8px;
+  }
+}
+@media (max-width: 768px) and (max-width: 480px) {
+  .hero__inner {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .hero__h1 {
+    font-size: 36px;
+  }
+  .hero__caption {
+    font-size: 18px;
+    margin-top: 21px;
+  }
+}
 .port {
   background-color: #FFFFFF;
   display: flex;
@@ -677,6 +763,8 @@ img {
 }
 .port__inner {
   max-width: 1200px;
+  padding-left: 30px;
+  padding-right: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -703,7 +791,7 @@ img {
   font-weight: 400;
   text-align: center;
   color: #102A43;
-  font-size: 64px;
+  font-size: 52px;
   line-height: 1;
   letter-spacing: 1.28px;
   margin: 0;
@@ -722,6 +810,42 @@ img {
   max-width: 760px;
 }
 
+@media (max-width: 1200px) {
+  .port__h2 {
+    font-size: 72px;
+  }
+  .port__h3 {
+    font-size: 48px;
+  }
+}
+@media (max-width: 990px) {
+  .port__h2 {
+    font-size: 64px;
+  }
+  .port__h3 {
+    font-size: 40px;
+  }
+}
+@media (max-width: 768px) {
+  .port__h2 {
+    font-size: 56px;
+  }
+  .port__h3 {
+    font-size: 38px;
+  }
+}
+@media (max-width: 480px) {
+  .port__h2 {
+    font-size: 46px;
+  }
+  .port__h3 {
+    font-size: 36px;
+  }
+}
+.about {
+  padding-top: 60px;
+}
+
 .future {
   background-color: #FFFFFF;
   display: flex;
@@ -731,6 +855,8 @@ img {
 }
 .future__inner {
   max-width: 1200px;
+  padding-left: 30px;
+  padding-right: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -753,11 +879,11 @@ img {
   max-width: 940px;
 }
 .future__h3 {
-  font-family: Heldane-Display-Bold, serif;
-  font-weight: 700;
+  font-family: Heldane-Display-Regular, serif;
+  font-weight: 400;
   text-align: center;
   color: #102A43;
-  font-size: 42px;
+  font-size: 52px;
   line-height: 1;
   letter-spacing: 1.28px;
   margin: 0;
@@ -776,6 +902,38 @@ img {
   max-width: 760px;
 }
 
+@media (max-width: 1200px) {
+  .future__h2 {
+    font-size: 72px;
+  }
+  .future__h3 {
+    font-size: 48px;
+  }
+}
+@media (max-width: 990px) {
+  .future__h2 {
+    font-size: 64px;
+  }
+  .future__h3 {
+    font-size: 40px;
+  }
+}
+@media (max-width: 768px) {
+  .future__h2 {
+    font-size: 56px;
+  }
+  .future__h3 {
+    font-size: 38px;
+  }
+}
+@media (max-width: 480px) {
+  .future__h2 {
+    font-size: 46px;
+  }
+  .future__h3 {
+    font-size: 36px;
+  }
+}
 .cards {
   display: flex;
   flex-direction: column;
@@ -813,7 +971,7 @@ img {
 .card__h3 {
   font-family: Titillium Web, sans-serif;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1;
   font-weight: 700;
   color: #CB6E17;
   text-transform: uppercase;
@@ -851,6 +1009,9 @@ img {
 .card__li:last-of-type {
   margin-bottom: 0;
 }
+.card__ol {
+  padding-left: 20px;
+}
 .card__split {
   display: flex;
   flex-direction: row;
@@ -878,5 +1039,54 @@ img {
   line-height: 1.5;
   color: #4A4A4A;
   margin: 0;
+}
+
+@media (max-width: 1200px) {
+  .card__h2 {
+    font-size: 32px;
+  }
+  .card__split-h4 {
+    font-size: 20px;
+  }
+}
+@media (max-width: 990px) {
+  .card__h2 {
+    font-size: 30px;
+    margin-bottom: 8px;
+  }
+  .card__split-h4 {
+    font-size: 18px;
+  }
+}
+@media (max-width: 768px) {
+  .card {
+    padding: 24px;
+  }
+  .card__h2 {
+    font-size: 27px;
+  }
+  .card__h3 {
+    font-size: 12px;
+  }
+  .card__p, .card__li {
+    font-size: 16px;
+  }
+  .card__split {
+    flex-direction: column;
+    gap: 18px;
+  }
+  .card__split-divider {
+    min-width: 100%;
+    min-height: 1px;
+    background-color: #EFEEEE;
+  }
+  .card__split-h4 {
+    font-size: 18px;
+  }
+}
+@media (max-width: 480px) {
+  .card__h2 {
+    font-size: 27px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
