--- a/style.css
+++ b/style.css
@@ -481,6 +481,9 @@ img {
   padding-right: 30px;
   box-sizing: content-box;
 }
+.header__blur, .header__mobile {
+  display: none;
+}
 .header__links {
   display: flex;
   gap: 22px;
@@ -513,6 +516,26 @@ img {
 .header__link:hover::before {
   transform: scaleX(1);
 }
+.header__close-menu {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 99999;
+  background-image: url("img/icon--menu-close.svg");
+  width: 40px;
+  height: 32px;
+}
+.header__open-menu {
+  background-image: url("img/icon--menu-open.svg");
+  width: 40px;
+  height: 32px;
+}
+.header__close-menu, .header__open-menu {
+  border: none;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-color: transparent;
+}
 
 @media (max-width: 768px) {
   .header__logo {
@@ -526,6 +549,63 @@ img {
   .header__inner {
     padding-left: 15px;
     padding-right: 15px;
+  }
+  .header__mobile {
+    display: block;
+    z-index: 99999;
+  }
+  .header__links {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #FFFFFF;
+    flex-direction: column;
+    padding-left: 0;
+    align-items: center;
+    width: 100%;
+    margin-top: 0;
+    gap: 0;
+    display: none;
+    z-index: 99999;
+  }
+  .header__link-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  .header__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 120px;
+    font-size: 30px;
+    text-align: center;
+  }
+  .header__link:hover {
+    color: #102A43;
+  }
+  .header__link::before {
+    display: none;
+  }
+  .header__blur {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    -webkit-backdrop-filter: blur(15px);
+            backdrop-filter: blur(15px);
+    background-color: rgba(0, 0, 0, 0.1);
+    top: 0;
+    left: 0;
+    z-index: 9;
+    display: none;
+  }
+  .opened .header__links {
+    display: flex;
+  }
+  .opened .header__blur {
+    display: block;
   }
 }
 .footer {
@@ -554,6 +634,7 @@ img {
   width: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .footer__links {
   list-style-type: none;
@@ -615,8 +696,28 @@ img {
   font-family: Titillium Web, sans-serif;
   color: #FFFFFF;
   font-size: 14px;
+  margin: 0;
 }
 
+@media (max-width: 1200px) {
+  .footer {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+}
+@media (max-width: 480px) {
+  .footer__inner {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .footer__top {
+    gap: 30px;
+  }
+  .footer__bottom {
+    flex-direction: column;
+    gap: 30px;
+  }
+}
 .hero {
   background-color: #FFFFFF;
   display: flex;
@@ -703,6 +804,9 @@ img {
   }
 }
 @media (max-width: 990px) {
+  .hero {
+    padding-top: 150px;
+  }
   .hero__h1 {
     font-size: 68px;
   }
@@ -724,14 +828,14 @@ img {
     margin-bottom: 12px;
   }
   .hero__h2 {
-    font-size: 16px;
+    font-size: 24px;
     line-height: 1.35;
-    max-width: 400px;
+    max-width: 460px;
     margin-bottom: 18px;
   }
   .hero__p {
     font-size: 14px;
-    max-width: 400px;
+    max-width: 460px;
   }
   .hero__caption {
     font-size: 21px;
@@ -742,16 +846,19 @@ img {
   }
 }
 @media (max-width: 768px) and (max-width: 480px) {
+  .hero {
+    padding-top: 130px;
+  }
   .hero__inner {
     padding-left: 15px;
     padding-right: 15px;
   }
   .hero__h1 {
-    font-size: 36px;
+    font-size: 54px;
   }
   .hero__caption {
-    font-size: 18px;
-    margin-top: 21px;
+    font-size: 21px;
+    margin-top: 30px;
   }
 }
 .port {
