--- a/style.css
+++ b/style.css
@@ -624,7 +624,7 @@ img {
 .footer__top {
   width: 100%;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   padding-bottom: 45px;
   gap: 90px;
 }
@@ -632,6 +632,7 @@ img {
   padding-top: 47px;
   border-top: 2px solid #FFFFFF;
   width: 100%;
+  gap: 30px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -643,6 +644,7 @@ img {
   gap: 18px;
   padding-left: 0;
   margin: 0;
+  flex-shrink: 0;
 }
 .footer__link {
   font-family: Heldane-Display-Bold, serif;
@@ -692,10 +694,33 @@ img {
 .footer__social-link:active {
   color: #CB6E17;
 }
-.footer__copyright {
+.footer__disclaimer, .footer__copyright {
   font-family: Titillium Web, sans-serif;
   color: #FFFFFF;
   font-size: 14px;
+  margin: 0;
+}
+.footer__disclaimer {
+  max-width: 460px;
+  margin-bottom: 10px;
+}
+.footer__disclaimer--big {
+  font-family: Titillium Web, sans-serif;
+  font-weight: 700;
+  color: white;
+  font-size: 24px;
+  margin: 0;
+  letter-spacing: 0.84px;
+  margin-bottom: 0;
+}
+.footer__disclaimer--small {
+  font-family: Titillium Web, sans-serif;
+  font-weight: 400;
+  color: white;
+  font-size: 16px;
+  line-height: 1.15;
+  letter-spacing: 0.26px;
+  color: rgb(160, 159, 160);
   margin: 0;
 }
 
@@ -703,6 +728,16 @@ img {
   .footer {
     padding-top: 40px;
     padding-bottom: 40px;
+  }
+}
+@media (max-width: 780px) {
+  .footer__top {
+    gap: 30px;
+  }
+}
+@media (max-width: 640px) {
+  .footer__top {
+    flex-direction: column;
   }
 }
 @media (max-width: 480px) {
@@ -716,6 +751,12 @@ img {
   .footer__bottom {
     flex-direction: column;
     gap: 30px;
+  }
+  .footer__disclaimer--big {
+    font-size: 18px;
+  }
+  .footer__disclaimer--small {
+    font-size: 14px;
   }
 }
 .hero {
@@ -946,6 +987,10 @@ img {
   }
 }
 @media (max-width: 480px) {
+  .port__inner {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
   .port__h2 {
     font-size: 46px;
   }
@@ -1093,7 +1138,7 @@ img {
   font-family: Heldane-Display-Bold, serif;
   font-weight: 700;
   color: #102A43;
-  font-size: 28px;
+  font-size: 22px;
   text-align: left;
 }
 .table__description {
@@ -1103,7 +1148,7 @@ img {
   font-size: 16px;
 }
 .table__links-wrapper {
-  max-width: 85px;
+  max-width: 150px;
 }
 .table__links {
   display: flex;
@@ -1305,6 +1350,136 @@ img {
 @media (max-width: 480px) {
   .card__h2 {
     font-size: 27px;
+  }
+}
+.accordion {
+  border-top: 1px solid #D4D4D4;
+  margin-top: -1px;
+  width: 100%;
+}
+.accordion:last-of-type {
+  border-bottom: 1px solid #D4D4D4;
+}
+.accordion__btn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: transparent;
+  font-weight: 400;
+  font-size: 24px;
+  color: var(--black);
+  text-align: left;
+  cursor: pointer;
+  padding: 30px;
+  width: 100%;
+  border: none;
+  outline: none;
+  transition: all 0.3s ease;
+}
+@media (hover: hover) and (pointer: fine) {
+  .accordion__btn:hover {
+    color: var(--orange--dark);
+    transition: all 0.3s ease;
+  }
+}
+.accordion__btn::after {
+  content: "";
+  background-image: url("img/faq__arrow.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 26px;
+  height: 11px;
+  float: right;
+  margin-left: 30px;
+}
+.accordion__text {
+  padding-right: 80px;
+  max-width: 760px;
+  margin: 0;
+  opacity: 0;
+}
+.accordion__text a {
+  color: var(--orange--dark);
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+@media (hover: hover) and (pointer: fine) {
+  .accordion__text a:hover {
+    color: var(--orange);
+  }
+}
+.accordion__text a:active {
+  color: var(--orange);
+}
+.accordion__text--bold {
+  font-weight: 600;
+}
+.accordion__panel {
+  color: var(--black);
+  padding: 0 30px;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.3s ease-out;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.accordion__panel li + li {
+  margin-top: 8px;
+}
+.accordion__panel p + p {
+  margin-top: 18px;
+}
+
+.active, .accordion__btn:active {
+  transition: all 0.3s ease;
+  padding-bottom: 10px;
+}
+
+.active::after {
+  content: "";
+  transform: scaleY(-1);
+  transition: all 0.3s ease;
+}
+
+.accordion:not(.active)::after {
+  transform: scaleY(1);
+  transition: all 0.3s ease;
+}
+
+.active ~ .accordion__panel {
+  padding: 0 30px;
+  padding-bottom: 30px;
+  padding-top: 10px;
+}
+.active ~ .accordion__panel .accordion__text {
+  opacity: 1;
+  transition: all 0.3s ease;
+}
+
+:not(.active) ~ .accordion__panel .accordion__text {
+  opacity: 0;
+  transition: all 0.3s ease;
+}
+
+@media screen and (max-width: 767px) {
+  .accordion__btn {
+    font-size: 18px;
+  }
+  .accordion__text {
+    font-size: 14px;
+    padding-right: 60px;
+  }
+}
+@media screen and (max-width: 340px) {
+  .accordion__btn {
+    padding: 20px;
+  }
+  .accordion__text {
+    padding-right: 0px;
+  }
+  .active ~ .accordion__panel {
+    padding: 0px 20px 20px 20px;
   }
 }
 /*# sourceMappingURL=style.css.map */
